--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.9.0",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-spinners": "^0.13.8",
     "styled-components": "^5.3.9"
   },
