--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.9.0",
     "react-scroll-to-bottom": "^4.2.0",
     "react-spinners": "^0.13.8",
+    "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
